tests/paczka2/big_fuzzy/75228057.err
Error in line 1: wbnaa Sw90 2,9
Error in line 5: f6cdg A417 40,2
Error in line 7: f6cdg S490 39,8
Error in line 9: KFeNPM A367 94,3
Error in line 19: KFeNPM A404 22,6
Error in line 21: f6cdg A404 59,0
Error in line 30: f6cdg A417 24,9
Error in line 12: wbnaa S490 14,4
Error in line 41: f6cdg A404 75,0
Error in line 32: wbnaa A417 73,3
Error in line 60: MQx A417 76,2
Error in line 59: f6cdg A404 3,2
Error in line 62: MQx S490 53,2
Error in line 74: wbnaa S490 254,8
Error in line 84: f6cdg A404 76,5
Error in line 119: wbnaa A417 -5,9
Error in line 108: KFeNPM S490 53,6
Error in line 127: 3ikZy A404 23,7
Error in line 136: 1Dz S490 86,9
Error in line 129: wbnaa A417 183,3
Error in line 121: KFeNPM A404 41,2
Error in line 141: wbnaa A404 38,2
Error in line 147: MQx A367 38,0
Error in line 142: KFeNPM A367 69,0
Error in line 165: wbnaa A367 87,6
Error in line 169: f6cdg A404 10,18
Error in line 171: KFeNPM A367 62,1
Error in line 179: S490 A417 73,1
Error in line 160: f6cdg A404 14,6
Error in line 208: 1Dz S490 4,1
Error in line 188: MQx A404 86,5
Error in line 218: wbnaa A404 94,5
Error in line 227: wbnaa A417 27,4
Error in line 222: MQx A417 94,3
Error in line 228: 3ikZy A417 15,0
Error in line 229: wbnaa A404 89,1
Error in line 236: wbnaa S490 61,0
Error in line 239: S490 A367 28,3
Error in line 224: KFeNPM S490 125,3
Error in line 242: wbnaa A404 16,4
